docs(api): regenerate api docs
